videotestsrc: include new math-compat.h header for rint() on MSVC

Should fix compilation with Visual Studio 2008.

https://bugzilla.gnome.org/show_bug.cgi?id=630802